# dagster-dingtalk

./: .gitignore  AGENT.MD  AGENTS.MD  README.md  pyproject.toml
.github/workflows/: publish.yml
dagster_dingtalk/: __init__.py  app_client.py  dynamic_ops.py  operations.py  resources.py
docs/: dingtalk_static_html_catalog.yaml  docinfolist_20260608.json  fetch_dingtalk_static_html.py
docs/dingtalk_static_html/AI 表格/: 上传附件.html  数据说明.html  概述.html
docs/dingtalk_static_html/API 调用指南/: API 权限列表.html  API 调用步骤详解.html  全局错误码.html  数据分页.html  服务端SDK下载.html  调用频率限制.html
docs/dingtalk_static_html/OA 审批/: 概述.html  补充参数说明.html
docs/dingtalk_static_html/事件订阅/: 概述.html  获取推送失败的事件列表.html
docs/dingtalk_static_html/公告/: 创建公告.html  删除公告.html  更新公告.html  查询公告已读未读人员列表.html  概述.html  获取公告ID列表.html  获取公告分类列表.html  获取公告详情.html  获取公告钉盘空间信息.html  获取用户可查看的公告.html
docs/dingtalk_static_html/即时通信/: 常见问题.html
docs/dingtalk_static_html/应用授权/: 概述.html  获取企业开通应用后的授权信息.html  获取企业授权信息.html  获取应用未激活的企业列表.html  获取授权应用的基本信息.html  重新授权未激活应用的企业.html
docs/dingtalk_static_html/应用管理/: 创建企业内部应用.html  删除企业内部应用.html  发布企业内部小程序版本.html  回滚企业内部小程序版本.html  更新企业内部应用.html  更新企业内部应用的可使用范围.html  概述.html  获取企业内部小程序历史版本列表.html  获取企业内部小程序的版本列表.html  获取企业内部应用的可使用范围.html  获取企业内部所有应用列表.html  获取企业所有应用列表.html  获取用户可见的企业应用列表.html
docs/dingtalk_static_html/待办任务/: 创建钉钉个人待办任务.html  创建钉钉待办任务.html  删除钉钉待办任务.html  常见问题.html  更新钉钉待办任务.html  更新钉钉待办执行者状态.html  查询企业下用户待办列表.html  概述.html
docs/dingtalk_static_html/日志/: 保存日志内容.html  创建日志.html  概述.html  获取日志接收人员列表.html  获取日志相关人员列表.html  (+6 more)
src/dagster_dingtalk/: __init__.py  app_client.py  operations.py  resources.py  utils.py  version.py
(+591 files in other folders)
