[project]
name = "dagster-dingtalk"
version = "0.29.11.1"
description = "A dagster plugin for the DingTalk"
readme = "README.md"
authors = [
    { name = "YiZixuan", email = "sqkkyzx@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx",
    "dagster>=1.13",
    "hatchling>=1.27.0",
    "pydantic>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
